--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 language: ruby
 
 rvm:
-    - 2.1.3
+  - 2.1.3
 
 cache: bundler
 
 script:
-    - sudo add-apt-repository ppa:danlipsitt/ppa -y
-    - sudo apt-get update -qq
-    - sudo apt-get install -y shellcheck
-    - ./bin/lint
-    - PATH=`pwd`:$PATH
-    - git config --global user.email 'git.town.ci@gmail.com'
-    - git config --global user.name 'Git Town CI'
-    - git config --global push.default simple
-    - bundle exec cucumber
+  - apt-get install cabal-install
+  - cabal update
+  - cabal install shellcheck
+  - export PATH=`pwd`:~/.cabal/bin/:$PATH
+  - ./bin/lint
+  - git config --global user.email 'git.town.ci@gmail.com'
+  - git config --global user.name 'Git Town CI'
+  - git config --global push.default simple
+  - bundle exec cucumber
