--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ rvm:
 cache: bundler
 
 script:
+  - git config user.email cucumber@git.town
+  - git config user.name "Git Town"
   - bin/travis -e -x
