--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: ruby
 
 rvm:
-    - 2.1.3
+  - 2.1.3
 
 cache: bundler
 
 script:
-    - PATH=`pwd`:$PATH
-    - git config --global user.email 'git.town.ci@gmail.com'
-    - git config --global user.name 'Git Town CI'
-    - git config --global push.default simple
-    - bundle exec cucumber
+  - git config --global user.email cucumber@git.town
+  - git config --global user.name "Git Town"
+  - bin/travis -e -x
