better bash options

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ cache: bundler
 script:
   - git config --global user.email cucumber@git.town
   - git config --global user.name "Git Town"
-  - bin/travis -e -x
+  - bin/travis
