--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,1 +1,1 @@
-default: -r features/step_definitions -r features/support
+default: -r features/step_definitions -r features/support --format=fuubar
