Use brew install on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ rvm:
 
 cache: bundler
 
+before_install:
+  - brew update
+  - brew install shellcheck
+
 script:
   - git config --global user.email cucumber@git.town
   - git config --global user.name "Git Town"
-  - bin/travis
+  - bundle exec rake
