Revert "Use brew install on travis"
This reverts commit 09455144a6c7fe3c5dc94f090531bab833c78f62.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,7 @@ rvm:
 
 cache: bundler
 
-before_install:
-  - brew update
-  - brew install shellcheck
-
 script:
   - git config --global user.email cucumber@git.town
   - git config --global user.name "Git Town"
-  - bundle exec rake
+  - bin/travis
