--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,10 @@ Style/EmptyLines:
   Enabled: false
 
 
+Style/EmptyLinesAroundClassBody:
+  EnforcedStyle: empty_lines
+
+
 Style/MethodDefParentheses:
   EnforcedStyle: require_no_parentheses
 
