--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ rvm:
 cache: bundler
 
 script:
-  - git config --global user.email cucumber@git.town
-  - git config --global user.name "Git Town"
-  - bin/travis
+  # Install ShellCheck
+  - sudo apt-get install cabal-install > /dev/null
+  - cabal update --verbose=0
+  - cabal install --verbose=0 shellcheck
+  - export PATH=~/.cabal/bin/:$PATH
+
+  # Run the full test suite
+  - bundle exec rake
