--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,4 @@ rvm:
 cache: bundler
 
 script:
-  # Install ShellCheck
-  - sudo apt-get install cabal-install > /dev/null
-  - cabal update --verbose=0
-  - cabal install --verbose=0 shellcheck
-  - export PATH=~/.cabal/bin/:$PATH
-
-  # Run the full test suite
-  - bundle exec rake
+  - bin/travis
