cleanup: verify errors instead of allowing them
closes #363

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,10 @@ Style/MethodDefParentheses:
   EnforcedStyle: require_no_parentheses
 
 
+Metrics/CyclomaticComplexity:
+  Max: 7
+
+
 Metrics/LineLength:
   Max: 120
 
