--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,10 @@ Style/MethodDefParentheses:
   EnforcedStyle: require_no_parentheses
 
 
+Metrics/AbcSize:
+  Max: 19
+
+
 Metrics/CyclomaticComplexity:
   Max: 7
 
