spread out circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -5,10 +5,14 @@ machine:
 
 
 dependencies:
+
   cache_directories:
     - "~/.cabal" # Keep shellcheck around between builds
+
   pre:
-    - sudo apt-get update; sudo apt-get install git
+    - sudo apt-get update
+    - sudo apt-get install git
+
   post:
     - bin/circleci-install-shellcheck
     - git --version
