--- a/circle.yml
+++ b/circle.yml
@@ -1,13 +1,17 @@
 machine:
   environment:
     PATH: $HOME/.cabal/bin/:$PATH
+
+    # CircleCI supports up to 32 processors,
+    # but 8 processors yields the fastest results
     PARALLEL_TEST_PROCESSORS: 8
 
 
 dependencies:
 
+  # Cache ShellCheck for subsequent builds
   cache_directories:
-    - "~/.cabal"     # Keep shellcheck around between builds
+    - "~/.cabal"
 
   post:
     - bin/circleci-install-shellcheck
