--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,10 @@ Style/MethodDefParentheses:
   EnforcedStyle: require_no_parentheses
 
 
+Style/StringLiterals:
+  EnforcedStyle: single_quotes
+
+
 Metrics/AbcSize:
   Max: 19
 
