--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ dependencies:
   # Cache ShellCheck for subsequent builds
   cache_directories:
     - "~/.cabal"
-    - "~/vendor/bundle"
+    - "~/git-town/vendor/bundle"
 
   post:
     - bin/circleci-install-shellcheck
