--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
   cache_directories:
     - "~/.cabal"
     - "~/git-town/vendor/bundle"
+    - "~/.rvm"
 
   post:
     - bin/circleci-install-shellcheck
