--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,6 @@
+AllCops:
+  TargetRubyVersion: 2.2
+
 Metrics/AbcSize:
   Max: 19
 
@@ -31,5 +34,17 @@ Style/MethodDefParentheses:
   EnforcedStyle: require_no_parentheses
 
 
+Style/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
+
+
+Style/NestedParenthesizedCalls:
+  Enabled: false
+
+
 Style/StringLiterals:
   EnforcedStyle: single_quotes
+
+
+Style/SignalException:
+  EnforcedStyle: only_fail
