--- a/circle.yml
+++ b/circle.yml
@@ -9,16 +9,22 @@ machine:
 
 
 checkout:
+
   override:
     - git clone --depth=2 --branch=$CIRCLE_BRANCH https://github.com/Originate/git-town.git /home/ubuntu/.go_workspace/src/github.com/gt
     - cd /home/ubuntu/.go_workspace/src/github.com/gt
     - git checkout $CIRCLE_SHA1
+
 
 dependencies:
 
   # Cache ShellCheck for subsequent builds
   cache_directories:
     - "~/.cabal"
+
+  override:
+    - cd /home/ubuntu/.go_workspace/src/github.com/gt
+    - go install
 
   post:
     - bin/circleci-install-shellcheck
