--- a/circle.yml
+++ b/circle.yml
@@ -24,6 +24,8 @@ dependencies:
 
   override:
     - cd /home/ubuntu/.go_workspace/src/github.com/gt
+    - go get github.com/Masterminds/glide
+    - glide install
     - go install
 
   post:
