--- a/circle.yml
+++ b/circle.yml
@@ -11,8 +11,8 @@ machine:
 checkout:
 
   override:
-    - git clone --depth=2 --branch=$CIRCLE_BRANCH https://github.com/Originate/git-town.git /home/ubuntu/.go_workspace/src/github.com/gt
-    - cd /home/ubuntu/.go_workspace/src/github.com/gt
+    - git clone --depth=2 --branch=$CIRCLE_BRANCH https://github.com/Originate/git-town.git /home/ubuntu/.go_workspace/src/github.com/Originate/gt
+    - cd /home/ubuntu/.go_workspace/src/github.com/Originate/gt
     - git checkout $CIRCLE_SHA1
 
 
@@ -23,7 +23,7 @@ dependencies:
     - "~/.cabal"
 
   override:
-    - cd /home/ubuntu/.go_workspace/src/github.com/gt
+    - cd /home/ubuntu/.go_workspace/src/github.com/Originate/gt
     - go install
 
   post:
