--- a/circle.yml
+++ b/circle.yml
@@ -26,6 +26,8 @@ dependencies:
     - mkdir -p /home/ubuntu/.go_workspace/src/github.com/Originate
     - cp -r /home/ubuntu/git-town /home/ubuntu/.go_workspace/src/github.com/Originate/gt
     - cd /home/ubuntu/.go_workspace/src/github.com/Originate/gt && go install
+    - echo $PATH
+    - which gt
     - gt version
     - cd /home/ubuntu/git-town && bundle install
 
