remove git folder 2

--- a/circle.yml
+++ b/circle.yml
@@ -24,8 +24,8 @@ dependencies:
 
   override:
     - mkdir -p /home/ubuntu/.go_workspace/src/github.com/Originate
-    - rm -rf /home/ubuntu/git-town/.git
     - cp -r /home/ubuntu/git-town /home/ubuntu/.go_workspace/src/github.com/Originate/gt
+    - rm -rf /home/ubuntu/.go_workspace/src/github.com/Originate/gt/.git
     - cd /home/ubuntu/.go_workspace/src/github.com/Originate/gt && go install
     - echo $PATH
     - which gt
