--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,6 @@ package: github.com/Originate/gt
 import:
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
+- package: github.com/golang/lint
+  subpackages:
+  - golint
