--- a/tertestrial.yml
+++ b/tertestrial.yml
@@ -8,3 +8,6 @@ actions:
       filename: '\.feature$'
       line: '\d+'
     command: 'go install && DEBUG_COMMANDS=1 bundle exec cucumber {{filename}}:{{line}}'
+
+  - match: {}
+    command: 'go install && DEBUG_COMMANDS=1 bundle exec cucumber features/git-town-hack'
