--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
     PARALLEL_TEST_PROCESSORS: 8
 
     PATH: $HOME/.cabal/bin/:$PATH
-    GO_PROJECT: "$HOME/.go_workspace/src/github.com/Originate/gt"
+    GO_PROJECT: "$HOME/.go_workspace/src/github.com/Originate/git-town"
 
 
 dependencies:
