--- a/circle.yml
+++ b/circle.yml
@@ -15,14 +15,16 @@ dependencies:
   cache_directories:
     - "~/.cabal"
 
-  override:
+  pre:
+    - rm -rf "$GO_PROJECT"
     - mkdir -p "$(dirname "$GO_PROJECT")"
-    - if [[ ! -e "$GO_PROJECT" ]]; then ln -s $HOME/git-town "$GO_PROJECT"; fi
-    - cd $GO_PROJECT && bin/setup
-    - cd /home/ubuntu/git-town && bundle install
+    - mv "$HOME/git-town" "$GO_PROJECT"
+    - ln -s "$GO_PROJECT" "$HOME/git-town"
 
-  post:
+  override:
+    - bin/setup
     - bin/circleci-install-shellcheck
+    - bundle install
 
 
 notify:
@@ -33,7 +35,7 @@ notify:
 test:
   override:
     - bundle exec rake lint:bash
-    - cd $GO_PROJECT && bin/lint_go
+    - bin/lint_go
     - bundle exec rake lint:ruby
     - bundle exec rake lint:cucumber
     - bundle exec rake test
