--- a/tertestrial.yml
+++ b/tertestrial.yml
@@ -7,4 +7,4 @@ actions:
   - match:
       filename: '\.feature$'
       line: '\d+'
-    command: 'bin/build && DEBUG_COMMANDS=1 bundle exec cucumber {{filename}}:{{line}}'
+    command: 'bin/build && bundle exec cucumber {{filename}}:{{line}}'
