--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 
 
-language: ruby
+language: go
 
 go:
   - 1.7
@@ -19,6 +19,7 @@ install:
   - go get github.com/Masterminds/glide github.com/golang/lint/golint
   - glide install
   - go install
+  - rvm install 2.3.1
   - bundle install
 
 
