--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,6 @@ language: go
 go:
   - 1.7
 
-rvm:
-  - 2.3.1
-
 
 install:
   - rvm install 2.3.1
@@ -31,7 +28,8 @@ after_success:
 deploy:
   provider: releases
   file_glob: true
-  api_key: "$GITHUB_TOKEN"
+  api_key:
+    secure: lxzr1xWsRnWueR8JCUGV2+9hOxbb6gL9AVR64HIJ1foIPz8eGUXtQUP1mG/NPOtbDq0Dx+dTVV6W5RxiXzkzBvDkK6ygtNmax9ZkAbQv/zNFaJiwtkXJrzwCBSQfeSH/Go7NwpnsJw+ucZ7oj68G4g99PsX2XNbTTJHzfVWmteg=
   file: "dist/*"
   skip_cleanup: true
   on:
