--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ notifications:
 
 after_success:
   - |-
-    [ "$TRAVIS_TAG" != "" ] && bin/xcompile
+    [ "$TRAVIS_TAG" != "" ] && bin/cross-compile
 
 
 deploy:
