--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,7 @@ notifications:
   email: false
 
 
-after_success:
-  - |-
-    [ "$TRAVIS_TAG" != "" ] && bin/cross-compile
+before_deploy: bin/cross-compile
 
 
 deploy:
